@@ -35,6 +35,11 @@ import math.geom2d.curve.SmoothCurve2D;
 import math.geom2d.line.LineSegment2D;
 import math.geom2d.line.StraightLine2D;
 import math.geom2d.polygon.HRectangle2D;
+import math.geom2d.transform.AffineTransform2D;
+import math.geom2d.transform.LineReflection2D;
+import math.geom2d.transform.Rotation2D;
+import math.geom2d.transform.Scaling2D;
+import math.geom2d.transform.Translation2D;
 
 /**
  * @author Legland
@@ -116,39 +121,94 @@ public class Circle2DTest extends TestCase {
 	/*
 	 * Test for Point2D[] getIntersections(StraightObject2D)
 	 */
-	public void testGetIntersectionsStraightObject2D() {
+	public void testGetIntersectionsStraightLine2D() {
 		Circle2D circle = new Circle2D(2, 3, 4);
 		Collection<Point2D> points;
 		
+		// horizontal line through touching circle on one point
 		StraightLine2D line0 = new StraightLine2D(6, 0, 0, 1);
 		points = circle.getIntersections(line0);
 		assertTrue(points.size() == 1);
 
+		// horizontal line touching circle in 2 points, passing through center
 		StraightLine2D line1 = new StraightLine2D(2, 0, 0, 1);
 		points = circle.getIntersections(line1);
 		assertTrue(points.size() == 2);
 		Iterator<Point2D> iter = points.iterator();
 		Point2D point1 = iter.next();
-		assertEquals(point1.getX(), 2, 1e-14);
-		assertEquals(point1.getY(), -1, 1e-14);
+		assertTrue(point1.equals(new Point2D(2, -1)));
 		Point2D point2 = iter.next();
-		assertEquals(point2.getX(), 2, 1e-14);
-		assertEquals(point2.getY(), 7, 1e-14);
+		assertTrue(point2.equals(new Point2D(2, 7)));
 
+		// not touching
 		StraightLine2D line2 = new StraightLine2D(6.2, 0, 0, 1);
 		points = circle.getIntersections(line2);
 		assertTrue(points.size() == 0);
-
+	}
+	
+	/*
+	 * Test for Point2D[] getIntersections(StraightObject2D)
+	 */
+	public void testGetIntersectionsLineSegment2D() {
 		// Test with a centered circle and 4 edges in each main direction
-		Circle2D circle2 = new Circle2D(0, 0, 10);
-		Collection<Point2D> points1 = circle2.getIntersections(new LineSegment2D(0, 0, 20, 0));
-		Collection<Point2D> points2 = circle2.getIntersections(new LineSegment2D(0, 0, 0, 20));
-		Collection<Point2D> points3 = circle2.getIntersections(new LineSegment2D(0, 0, -20, 0));
-		Collection<Point2D> points4 = circle2.getIntersections(new LineSegment2D(0, 0, 0, -20));
+		Circle2D circle = new Circle2D(0, 0, 10);
+		Collection<Point2D> points1 = circle.getIntersections(new LineSegment2D(0, 0, 20, 0));
+		Collection<Point2D> points2 = circle.getIntersections(new LineSegment2D(0, 0, 0, 20));
+		Collection<Point2D> points3 = circle.getIntersections(new LineSegment2D(0, 0, -20, 0));
+		Collection<Point2D> points4 = circle.getIntersections(new LineSegment2D(0, 0, 0, -20));
 		assertTrue(points1.iterator().next().equals(new Point2D(10, 0)));
 		assertTrue(points2.iterator().next().equals(new Point2D(0, 10)));
 		assertTrue(points3.iterator().next().equals(new Point2D(-10, 0)));
 		assertTrue(points4.iterator().next().equals(new Point2D(0, -10)));		
+	}
+	
+	public void testTransform(){
+		Circle2D circle = new Circle2D(2, 3, 4);
+		
+		Ellipse2D transformed;
+		
+		// Transform with a translation
+		transformed = circle.transform(new Translation2D(1, 2));
+		assertTrue(transformed instanceof Circle2D);
+		assertTrue(transformed.equals(new Circle2D(3, 5, 4)));
+		assertTrue(transformed.isDirect());
+		
+		// Transform with a rotation
+		transformed = circle.transform(new Rotation2D(0, 0, Math.PI/2));
+		assertTrue(transformed instanceof Circle2D);
+		assertTrue(transformed.equals(new Circle2D(-3, 2, 4)));
+		assertTrue(transformed.isDirect());
+		
+		// Transform with a scaling
+		transformed = circle.transform(new Scaling2D(2, 2));
+		assertTrue(transformed instanceof Circle2D);
+		assertTrue(transformed.equals(new Circle2D(4, 6, 8)));
+		assertTrue(transformed.isDirect());
+		
+		// Transform with a line reflection
+		AffineTransform2D transform = new LineReflection2D(new StraightLine2D(0, 0, 1, 1));
+		transformed = circle.transform(transform);
+		assertTrue(transformed instanceof Circle2D);
+		assertTrue(transformed.equals(new Circle2D(3, 2, 4, false)));
+		assertTrue(!transformed.isDirect());
+	}
+	
+	
+	public void testGetSubCurve(){
+		Circle2D circle;
+		CircleArc2D arc1, arc2;
+		
+		// try with a direct circle 
+		circle = new Circle2D(0, 0, 10, true);
+		arc1 = new CircleArc2D(circle, Math.PI/2, Math.PI/2);		
+		arc2 = circle.getSubCurve(Math.PI/2, Math.PI);
+		assertTrue(arc1.equals(arc2));
+		
+		// try again with an indirect circle
+		circle = new Circle2D(0, 0, 10, false);
+		arc1 = new CircleArc2D(circle, Math.PI/2, -Math.PI/2);
+		arc2 = circle.getSubCurve(3*Math.PI/2, 2*Math.PI);
+		assertTrue(arc1.equals(arc2));
 	}
 	
 	/**
@@ -202,25 +262,9 @@ public class Circle2DTest extends TestCase {
 		assertTrue(new CircleArc2D(circle, 0, Math.PI/2).equals(arc));
 	}
 	
-	public void testGetSubCurve(){
-		Circle2D circle;
-		CircleArc2D arc1, arc2;
-		
-		// try with a direct circle 
-		circle = new Circle2D(0, 0, 10, true);
-		arc1 = new CircleArc2D(circle, Math.PI/2, Math.PI/2);		
-		arc2 = circle.getSubCurve(Math.PI/2, Math.PI);
-		assertTrue(arc1.equals(arc2));
-		
-		// try again with an indirect circle
-		circle = new Circle2D(0, 0, 10, false);
-		arc1 = new CircleArc2D(circle, Math.PI/2, -Math.PI/2);
-		arc2 = circle.getSubCurve(3*Math.PI/2, 2*Math.PI);
-		assertTrue(arc1.equals(arc2));
-	}
-	
 	/**
-	 * Clip with a box when circle is totally inside the box
+	 * Clip with a box when circle is totally inside the box, but that touches
+	 * the box.
 	 */
 	public void testClipBox_Touch(){
 		Circle2D circle = new Circle2D(50, 50, 50);
